--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
     <section class="contact-form">
         <h2>Contact Me</h2>
-        <form action="mailto:your@email.com" method="post" enctype="text/plain">
+        <form action="nikhil.dhokare@icloud.com" method="post" enctype="text/plain">
             <label for="message">Message:</label>
             <textarea id="message" name="message" rows="4" required></textarea>
             <button type="submit">Submit</button>
