--- a/index.html
+++ b/index.html
@@ -118,6 +118,61 @@
             transform: scale(1.1);
         }
 
+        .link-buttons a.glow-on-hover {
+            position: relative;
+            z-index: 0;
+            border-radius: 10px;
+            overflow: hidden;
+        }
+
+        .link-buttons a.glow-on-hover:before {
+            content: '';
+            background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
+            position: absolute;
+            top: -2px;
+            left:-2px;
+            background-size: 400%;
+            z-index: -1;
+            filter: blur(5px);
+            width: calc(100% + 4px);
+            height: calc(100% + 4px);
+            animation: glowing 20s linear infinite;
+            opacity: 50;
+            transition: opacity .3s ease-in-out;
+            border-radius: 10px;
+        }
+
+        .link-buttons a.glow-on-hover:active {
+
+            color: #000
+        }
+
+        .link-buttons a.glow-on-hover:active:after {
+            background: transparent;
+        }
+
+        .link-buttons a.glow-on-hover:hover:before {
+            opacity: 1;
+        }
+
+        .link-buttons a.glow-on-hover:after {
+            z-index: -1;
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background: #080808;
+            left: 0;
+            top: 0;
+            border-radius: 10px;
+        }
+
+        @keyframes glowing {
+            0% { background-position: 0 0; }
+            50% { background-position: 400% 0; }
+            100% { background-position: 0 0; }
+        }
+
         .content-creator-info {
             margin-top: 20px;
             text-align: center;
@@ -195,11 +250,11 @@
     </header>
 
     <section class="link-buttons">
-        <a href="YourPortfolioLink" target="_blank"><img src=https://cathygregory.com/portfoliogallerystl.org/images/all-colors/Portfolio-Gallery-circle-Logo-300.png alt="Portfolio"></a>
-        <a href="https://www.codechef.com/users/nikhildhokare" target="_blank"><img src=https://s3.amazonaws.com/discourseproduction/original/1X/ba28115bd3d5badf6cce0eb175d5875dadee3b12.png
+        <a href="YourPortfolioLink" target="_blank" class="glow-on-hover"><img src=https://cathygregory.com/portfoliogallerystl.org/images/all-colors/Portfolio-Gallery-circle-Logo-300.png alt="Portfolio"></a>
+        <a href="https://www.codechef.com/users/nikhildhokare" target="_blank" class="glow-on-hover"><img src=https://s3.amazonaws.com/discourseproduction/original/1X/ba28115bd3d5badf6cce0eb175d5875dadee3b12.png
                 alt="Codechef"></a>
-        <a href="https://www.linkedin.com/in/nikhil-dhokare-2b4880259?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="_blank"><img src=https://www.shareicon.net/data/2016/07/13/606885_linkedin_2048x2048.png alt="LinkedIn"></a>
-        <a href="https://www.instagram.com/nikhil.editzz/" target="_blank"><img src=https://www.pngkey.com/png/full/283-2831746_insta-icon-instagram.png
+        <a href="https://www.linkedin.com/in/nikhil-dhokare-2b4880259?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="_blank" class="glow-on-hover"><img src=https://cdn1.iconfinder.com/data/icons/logotypes/32/circle-linkedin-512.png alt="LinkedIn"></a>
+        <a href="https://www.instagram.com/nikhil.editzz/" target="_blank" class="glow-on-hover"><img src=https://www.pngkey.com/png/full/283-2831746_insta-icon-instagram.png
                 alt="Instagram"></a>
         <!-- Add more links as needed -->
     </section>
